* IMPROVED:
   * OCR: MUCH better ocr of italics when using Tesseract
   * OCR: Added some detection of music symbols when using Tesseract
   * Waveform now performs better when many lines are selected
   * Waveform now has focused rectangle
   * Network mode more stable (auto-restart)
   * Updated Czech language file - thx Trottel
   * Updated German language file - thx Christoph Kitsche
* FIXED:
   * VobSub (sub/idx) files created by SE now have better compability
   * Possible crash+bug in 'Fix common errors' on selected lines - thx Dan
   * Drag'n'drop of large bluray sup files - thx AT
   * Minor fix in 'Fix common errors -> Fix invalid italic tags' - thx azu


3.3.1 (3rd February 2013)
* NEW:
   * Added a few new subtitle formats (now 150 formats!)
   * French language - thx JM GBT
   * German language - thx Christoph Kitsche
   * Greek language - thx Menes
* IMPROVED:
   * Improved reading of bad srt files - thx Ile
   * Slow Timed Text 1.0 loading speeded up
   * Sligtly improved reading of italics in timed text draft - thx Jean
   * Export to png/xml now uses font styles from ssa/ass
   * Export images - better cropping
   * Alignment tags now works for format PAC - thx Jussi
   * Allows chars/sec down to 4 due to e.g. Japanese - thx dandomina
* FIXED:
   * No longer removes last lines in 'Merge short lines' - thx Pax
   * Some fixes for networking mode regarding insert/split - thx Dan
   * Fixed possible crash in list view regarding syntax coloring
   * Point sync no longer thows away ssa/ass styling - thx Mike
   * Fixed bug in Dutch language file - thx jan bruyndonckx
   * Fixed bug in converting ass to ssa
   * Some fixes for xsubtitle - thx Ed
   * File -> SSA/ASS properties - only update/add changed properties


3.3 (9th December 2012)
* NEW:
   * Added column commands to list view context menu - thx Seungki
   * Edit -> Reverse RTL start/end (fix punctuations)
   * Easy import of auto-backup files (File -> Restore auto-backup...)